--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,7 +6,7 @@
   --gray-400: #ced4da;
   --gray-500: #adb5bd;
   --gray-600: #868e96;
-  --gray-700: #495057;
+  --gray-700: #495057;  
   --gray-800: #343a40;
   --gray-900: #212529;
 
@@ -26,14 +26,13 @@
   --blue-400: #4dabf7;
   --yellow-100: #fff3bf;
 
-  --body-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --body-font: "Noto Sans";
   --body-font-size: 18px;
   --body-line-height: 1.5;
   --body-color: var(--gray-700);
   --body-bg: #fff;
 
-  --text-font: Times, "Times New Roman", "Free Serif", "Noto Serif", TimesNewRomanPSMT, "Droid Serif";
-
+  --text-font: "Noto Sans";
   --link-color: var(--blue);
   --link-hover-color: #1c7ed6;
 
