폰트 변경 도전

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -26,13 +26,14 @@
   --blue-400: #4dabf7;
   --yellow-100: #fff3bf;
 
-  --body-font: "Noto Sans";
+  --body-font: -apple-system, BlinkMacSystemFont, "Nanum Gothic", "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --body-font-size: 18px;
   --body-line-height: 1.5;
   --body-color: var(--gray-700);
   --body-bg: #fff;
 
-  --text-font: "Noto Sans";
+  --text-font: "Nanum Gothic", Times, "Times New Roman", "Free Serif", "Noto Serif", TimesNewRomanPSMT, "Droid Serif";
+
   --link-color: var(--blue);
   --link-hover-color: #1c7ed6;
 
