--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -24,6 +24,7 @@ pre {
   margin-bottom: var(--spacer);
   background-color: var(--code-bg);
   border-radius: var(--border-radius);
+  color: var(--code-font);
 
   pre {
     margin-bottom: 0;
