--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -6,8 +6,8 @@
 code,
 pre {
   font-family: var(--code-font);
-  color: var(--code-font);
-  background-color: var(--code-bg);
+  color: red;
+  background-color: rgba(135,131,120,0.15);
 
 }
 
