--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -44,7 +44,7 @@
 
   --code-font:  SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --code-color: var(--red);
-  --code-bg: #fbf1c7;
+  --code-bg: rgba(135,131,120,0.15);
 
   --spacer: 1rem;
   --spacer-2: calc(var(--spacer) * 1.5);
