--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -43,8 +43,8 @@
   --border-radius: .25rem;
 
   --code-font:  SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  --code-color: var(--red);
-  --code-bg: rgba(135,131,120,0.15);
+  --code-color: var(--grape);
+  --code-bg: #fbf1c7;
 
   --spacer: 1rem;
   --spacer-2: calc(var(--spacer) * 1.5);
