--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,11 +35,11 @@ layout: default
   {% if paginator.next_page %}
     <a class="pagination-item older" href="{{ paginator.next_page_path | relative_url }}">Older</a>
   {% else %}
-    <span class="pagination-item older">Older</span>
+    <span class="pagination-item older">paginator.next_page</span>
   {% endif %}
   {% if paginator.previous_page %}
     <a class="pagination-item newer" href="{{ paginator.previous_page_path | prepend: relative_url }}">Newer</a>
   {% else %}
-    <span class="pagination-item newer">Newer</span>
+    <span class="pagination-item newer">paginator.previous_page_path</span>
   {% endif %}
 </div>
