--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,13 +33,13 @@ layout: default
 
 <div class="pagination">
   {% if paginator.next_page %}
-    <a class="pagination-item older" href="{{ paginator.next_page_path | relative_url }}">Older</a>
+    <a class="pagination-item older" href="{{ paginator.next_page_path | relative_url }}">{% paginator.next_page_path}</a>
   {% else %}
-    <span class="pagination-item older">paginator.next_page</span>
+    <span class="pagination-item older">Older</span>
   {% endif %}
   {% if paginator.previous_page %}
-    <a class="pagination-item newer" href="{{ paginator.previous_page_path | prepend: relative_url }}">Newer</a>
+    <a class="pagination-item newer" href="{{ paginator.previous_page_path | prepend: relative_url }}">{% paginator.previous_page_path}</a>
   {% else %}
-    <span class="pagination-item newer">paginator.previous_page_path</span>
+    <span class="pagination-item newer">Newer</span>
   {% endif %}
 </div>
